--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -5,6 +5,16 @@
   pre_tasks:
     - name: check connectivity to all hosts
       ping:
+
+    - name: "Set release version fact"
+      set_fact:
+        release_version: "{{ lookup('pipe','date \"+%Y-%m-%d-%H-%M-%S-%Z\"') }}"
+      delegate_to: localhost
+      run_once: true
+
+    - name: "Set release version facts"
+      set_fact:
+        backend_app_release_version: "{{ release_version }}"
   roles:
     - base
     - firewalld
