Create a dedicated nginx role for nginx tasks.

--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -29,16 +29,10 @@
 
 - hosts: backend
   become: true
-  pre_tasks:
-    - name: Set httpd_can_network_connect flag on and keep it persistent across reboots
-      seboolean:
-        name: httpd_can_network_connect
-        state: true
-        persistent: true
   roles:
     - backend_app
     - ssl
-    - geerlingguy.nginx
+    - nginx
   vars_files:
     - vars/shared.yml
     - vars/backend.yml
