--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -10,6 +10,7 @@ $controller_vm_setup_script = <<-SCRIPT
 if ! grep -q "cd /vagrant/provisioning" /home/vagrant/.bashrc ; then 
   echo "cd /vagrant/provisioning" >> /home/vagrant/.bashrc 
 fi
+# install ansible requirements
 sudo yum install -y epel-release
 sudo yum install -y python36 python36-pip python36-devel sshpass
 # Vagrant doesn't allow us to specify which version of pip/python is used to
@@ -134,7 +135,7 @@ Vagrant.configure("2") do |config|
       ansible.galaxy_role_file = "requirements.yml"
       ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file}"
       ansible.verbose = false
-      ansible.limit = "all"
+      ansible.limit = "all,localhost"
       ansible.inventory_path = "environments/dev/inventory"
     end
     # Shut down the controller VM once it has finished provisioning the other VMs.
