--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -36,4 +36,11 @@
   vars_files:
     - vars/shared.yml
     - vars/backend.yml
+
+- hosts: localhost
+  become: true
+  roles:
+    - yarn
+  vars:
+    ansible_python_interpreter: "/usr/bin/python"
 {% endraw %}
