Add task to check that yarn is present.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/yarn/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/yarn/tasks/main.yml
@@ -2,3 +2,6 @@
 
 - include_tasks: setup-RedHat.yml
   when: ansible_os_family == 'RedHat'
+
+- name: check that yarn is present
+  command: command -v yarn
