--- a/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/backend.yml
@@ -14,57 +14,41 @@ ssl_common_name: "{{ backend_server_name }}"
 ssl_private_key_name: "backend_app.pem"
 ssl_certificate_name: "backend_app.crt"
 
-nginx_remove_default_vhost: true
-
-nginx_server_tokens: "off"
-
-nginx_upstreams:
-  - name: backend_app
-    strategy: least_conn
-    servers:
-      - "127.0.0.1:8080 fail_timeout=0"
-
-nginx_extra_http_options: |
-  # Configuration based on the Mozilla SSL configuration tool at
-  # https://ssl-config.mozilla.org/#server=nginx&server-version=1.16.1&config=intermediate
-  ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
-  ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
-  ssl_session_timeout 1d;
-  ssl_session_cache shared:BackendAppSSL:10m;  # about 40000 sessions
-  ssl_session_tickets off;
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-  ssl_prefer_server_ciphers on;
-
 nginx_vhosts:
-  - listen: "80 default_server"
+  - listen: "80"
     server_name: "{{ backend_server_name }}"
     return: 301 https://$server_name$request_uri
-    filename: "ssl_redirect.conf"
+    filename: "backend_ssl_redirect.conf"
 
   # catch-all configuration to validate the 'Host' HTTP header. A request which does
   # not match the specified 'server_name' will be returned a 404 response. See
   # https://docs.djangoproject.com/en/2.2/howto/deployment/checklist/#allowed-hosts
   # for more.
-  - listen: "443 ssl default_server"
+  - listen: "443 ssl"
     server_name: "_"
     return: "404"
-    filename: "ssl_catchall.conf"
+    filename: "01_backend_ssl_catchall.conf"
+    extra_parameters: |
+      ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
+      ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
 
   - listen: "443 ssl"
     server_name: "{{ backend_server_name }}"
-    filename: "backend_app.conf"
+    filename: "02_backend_app.conf"
     extra_parameters: |
       location / {
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
           proxy_set_header Host $http_host;
           proxy_redirect off;
-          proxy_pass http://backend_app;
+          proxy_pass http://127.0.0.1:8080;
       }
 
       location /static {
           alias {{ static_root }};
       }
+
+      ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
+      ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
 
 {% endraw %}
