--- a/{{ cookiecutter.project_slug }}/provisioning/vars/shared.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/shared.yml
@@ -1,6 +1,21 @@
 ---
 
+# Variables which are shared across different roles or different plays.
+
 systemd_backend_runtime_dir: "{{ cookiecutter.project_slug }}"
 database_name: "{{ cookiecutter.project_slug }}"
 database_user: "{{ cookiecutter.project_slug }}"
 static_root: "/usr/share/nginx/backend_app_static"
+
+nginx_remove_default_vhost: true
+
+nginx_server_tokens: "off"
+
+nginx_extra_http_options: |
+  # Configuration based on the Mozilla SSL configuration tool at
+  # https://ssl-config.mozilla.org/#server=nginx&server-version=1.16.1&config=intermediate
+  ssl_session_timeout 1d;
+  ssl_session_tickets off;
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+  ssl_prefer_server_ciphers on;
