Move static root into project directory, so it can be rolled back by changing the 'current' symlink.

--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -2,4 +2,5 @@
 /provisioning/galaxy_roles/
 /backend_app/settings.env
 /backend_app/venv/
+/backend_app/static_root/
 /backend_app/coverage_html_report/
