Add tasks for building frontend app.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/yarn/tasks/setup-RedHat.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/yarn/tasks/setup-RedHat.yml
@@ -1,6 +1,7 @@
 ---
 {% raw %}
 - name: add the yarn repo
+  become: true
   yum_repository:
     name: yarn
     description: Yarn Repository
@@ -9,11 +10,13 @@
     gpgkey: https://dl.yarnpkg.com/rpm/pubkey.gpg
 
 - name: add the node.js 10 repo
+  become: true
   yum:
     name: "https://rpm.nodesource.com/pub_10.x/el/{{ ansible_distribution_major_version }}/x86_64/nodesource-release-el{{ ansible_distribution_major_version }}-1.noarch.rpm"
     state: present
 
 - name: install node.js and yarn
+  become: true
   yum:
     name:
       - nodejs
