--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -1,17 +1,26 @@
 ---
 {% raw %}
+- hosts: localhost
+  roles:
+    - yarn
+  tasks:
+    - name: build frontend app
+      include_role:
+        name: frontend_app
+        tasks_from: build.yml
+  vars:
+    ansible_python_interpreter: "/usr/bin/python"
+
 - hosts: all
   become: true
   pre_tasks:
     - name: check connectivity to all hosts
       ping:
-
     - name: "Set release version fact"
       set_fact:
         release_version: "{{ lookup('pipe','date \"+%Y-%m-%d-%H-%M-%S-%Z\"') }}"
       delegate_to: localhost
       run_once: true
-
     - name: "Set release version facts"
       set_fact:
         backend_app_release_version: "{{ release_version }}"
@@ -36,13 +45,6 @@
   vars_files:
     - vars/shared.yml
     - vars/backend.yml
-
-- hosts: localhost
-  become: true
-  roles:
-    - yarn
-  vars:
-    ansible_python_interpreter: "/usr/bin/python"
 
 - hosts: frontend
   become: true
