Add initial tasks for provisioning the frontend app.
Ensure deploy_helper facts are prefixed with the role name. There seems
to be some unintuitive behaviour where the 'deploy_helper' fact set in
a previous play won't be updated the next time deploy_helper is called.

--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -24,6 +24,7 @@
     - name: "Set release version facts"
       set_fact:
         backend_app_release_version: "{{ release_version }}"
+        frontend_app_release_version: "{{ release_version }}"
   roles:
     - base
     - firewalld
@@ -51,6 +52,7 @@
   roles:
     - ssl
     - nginx
+    - frontend_app
   vars_files:
     - vars/shared.yml
     - vars/frontend.yml
