--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/run_deploy.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/run_deploy.yml
@@ -29,13 +29,17 @@
     release: "{{ backend_app_release_version }}"
     state: present
     shared_path: ""
+  register: backend_app_deploy_helper_output
+
+- set_fact:
+    backend_app_deploy_helper: "{{ backend_app_deploy_helper_output['ansible_facts']['deploy_helper'] }}"
 
 - name: synchronize backend_app to the new release folder
   become: true
   become_user: "{{ backend_app_user }}"
   synchronize:
     src: "{{ playbook_dir }}/../backend_app/"
-    dest: "{{ deploy_helper.new_release_path }}"
+    dest: "{{ backend_app_deploy_helper.new_release_path }}"
     rsync_opts:
       - "--exclude=__pycache__"
       - "--exclude=settings.env"
@@ -47,6 +51,6 @@
   become: true
   become_user: "{{ backend_app_user }}"
   file:
-    path: '{{ deploy_helper.new_release_path }}/{{ deploy_helper.unfinished_filename }}'
+    path: '{{ backend_app_deploy_helper.new_release_path }}/{{ backend_app_deploy_helper.unfinished_filename }}'
     state: touch
 {% endraw %}
