--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -49,7 +49,8 @@ Vagrant.configure("2") do |config|
   config.hostmanager.manage_guest = true
 
   config.vm.define "dev", primary: true do |machine|
-    machine.vm.hostname = "{{ cookiecutter.dev_vm_hostname }}"
+    machine.vm.hostname = "{{ cookiecutter.frontend_app_hostname }}"
+    machine.hostmanager.aliases = ["{{ cookiecutter.backend_app_hostname }}"]
 
     # Enables X11 forwarding. This can be useful when running Selenium tests
     # since you can see exactly what's happening in the browser during the tests.
@@ -82,7 +83,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "db" do |machine|
-    machine.vm.hostname = "{{ cookiecutter.db_vm_hostname }}"
+    machine.vm.hostname = "{{ cookiecutter.database_hostname }}"
     machine.vm.network "private_network", ip: "172.17.177.22"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_db"
