--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
@@ -11,7 +11,7 @@
     chdir: "{{ playbook_dir }}/../frontend_app/"
 
 # Note that this doesn't fail the playbook if vulnerable packages are found.
-# This only displays the report in the ansible output, so we don't cause any
+# This only displays the report in the ansible output so we don't cause any
 # deployment to fail unexpectedly.
 - name: run yarn audit
   command: yarn audit
