--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -83,6 +83,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.define "db" do |machine|
+    machine.vbguest.no_install = true
     machine.vm.hostname = "{{ cookiecutter.database_hostname }}"
     machine.vm.network "private_network", ip: "172.17.177.22"
     machine.vm.provider "virtualbox" do |virtualbox|
