--- a/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/vars/frontend.yml
@@ -26,6 +26,15 @@ nginx_vhosts:
     root: "{{ frontend_app_root }}/current/"
     index: "index.html"
     extra_parameters: |
+      location /static {
+          # serve static files as normal
+      }
+
+      location / {
+          # rely on the frontend app to handle all other urls if no matching file exists.
+          try_files $uri /index.html;
+      }
+
       ssl_certificate /etc/pki/tls/certs/{{ ssl_certificate_name }};
       ssl_certificate_key /etc/pki/tls/private/{{ ssl_private_key_name }};
 {% endraw %}
