--- a/{{ cookiecutter.project_slug }}/backend_app/requirements.in
+++ b/{{ cookiecutter.project_slug }}/backend_app/requirements.in
@@ -2,6 +2,7 @@ black>=19.3b0
 coverage>=4.5.4
 Django>=2.2.4
 django-environ>=0.4.5
+djangorestframework>=3.10.3
 flake8>=3.7.8
 gunicorn>=19.9.0
 ipython>=7.7.0
