--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -1,5 +1,7 @@
 #---
 #
+#backend_server_name: "<your-production-server-backend-cname>"
+#
 #database_password: "<your-production-database-password>"
 #
 #firewalld_backend_ip_addresses:
