Add role for sanity checking the code version before deployment.

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
@@ -1,6 +1,10 @@
 ---
 
+deploy_check_display_confirmation_prompts: false
+
 backend_server_name: "{{ cookiecutter.backend_app_hostname }}"
+
+frontend_server_name: "{{ cookiecutter.frontend_app_hostname }}"
 
 database_password: "$DATABASE PASSWORD$"
 
