Move ssl definitions to the 'all' group.

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -8,3 +8,6 @@
 #
 #firewalld_backend_ip_addresses:
 # - <your-production-backend-ip-address>
+#
+#ssl_provider: 'certbot'
+#ssl_certbot_email: '<your-certbot-notification-email>'
