Display a warning message when ssh'ing onto a production host.

--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
@@ -2,6 +2,8 @@
 
 deploy_check_display_confirmation_prompts: false
 
+base_show_production_login_message: false
+
 backend_server_name: "{{ cookiecutter.backend_app_hostname }}"
 
 frontend_server_name: "{{ cookiecutter.frontend_app_hostname }}"
