--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -4,12 +4,12 @@
 Vagrant.require_version ">= 2.2.5"
 
 if Vagrant::Util::Platform.windows? then
-  def running_as_admin
+  def running_as_admin?
     # query the LOCAL SERVICE account reg key (requires admin privileges)
     system('reg query "HKU\S-1-5-19"', :out => File::NULL)
   end
 
-  unless running_as_admin
+  unless running_as_admin?
     puts "Admin rights are required to create symlinks. Try running this Vagrantfile again from an admin command prompt."
     exit 1
   end
@@ -51,7 +51,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "dev", primary: true do |machine|
     machine.vm.hostname = "{{ cookiecutter.frontend_app_hostname }}"
     machine.hostmanager.aliases = ["{{ cookiecutter.backend_app_hostname }}"]
-
+    machine.vm.network "private_network", ip: "172.17.177.21"
     # Enables X11 forwarding. This can be useful when running Selenium tests
     # since you can see exactly what's happening in the browser during the tests.
     # This requires an X11 server on your host machine, see https://www.xquartz.org
@@ -78,7 +78,6 @@ Vagrant.configure("2") do |config|
 
     machine.vm.provision "shell", inline: $dev_vm_post_up_script, run: "always"
 
-    machine.vm.network "private_network", ip: "172.17.177.21"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_dev"
       virtualbox.memory = 1024
@@ -108,6 +107,13 @@ Vagrant.configure("2") do |config|
   # However, this process does result in the creation of a 'controller' VM,
   # which increases the system resources used for this dev environment.
   config.vm.define "controller" do |machine|
+    # By default Vagrant adds the host's name to the loopback address when
+    # setting machine.vm.hostname. This can result in unexpected behaviour
+    # when attempting to bind to the host like we do in
+    # frontend_app/start_local_dev.sh, so instead we use a hostname alias
+    # and set the hostname later on in an inline script.
+    # See See https://github.com/hashicorp/vagrant/issues/7263 for more.
+    machine.hostmanager.aliases = ["{{ cookiecutter.controller_hostname }}"]
     machine.vm.network "private_network", ip: "172.17.177.20"
     machine.vm.synced_folder "./", "/vagrant", type: "virtualbox"
     # Mount the folder containing the dev vm ssh keys with explicit file
@@ -126,16 +132,17 @@ Vagrant.configure("2") do |config|
     end
 
     $controller_vm_setup_script = <<-SCRIPT
+      hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
       # install ansible requirements
-      sudo yum install -y epel-release
-      sudo yum install -y python36 python36-pip python36-devel sshpass
+      yum install -y epel-release
+      yum install -y python36 python36-pip python36-devel sshpass
       # Vagrant doesn't allow us to specify which version of pip/python is used to
       # install our provisioning requirements when using the 'ansible_local'
       # provisioner, so we set the system default to Python 3.
-      sudo alternatives --install /usr/bin/pip pip /usr/bin/pip3.6 1
+      alternatives --install /usr/bin/pip pip /usr/bin/pip3.6 1
     SCRIPT
 
-    machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: false
+    machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: true
 
     machine.vm.provision "ansible_local" do |ansible|
       ansible.compatibility_mode = "2.0"
