--- a/{{ cookiecutter.project_slug }}/frontend_app/package.json
+++ b/{{ cookiecutter.project_slug }}/frontend_app/package.json
@@ -21,7 +21,7 @@
     "build": "yarn run check-environment && react-scripts build",
     "test": "yarn run check-environment && react-scripts test",
     "eject": "react-scripts eject",
-    "prettier": " prettier --write \"src/**/*.{ts,tsx}\""
+    "prettier": " prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": "react-app"
