--- a/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/dev/group_vars/all/vars.yml
@@ -3,6 +3,7 @@
 deploy_check_display_confirmation_prompts: false
 
 base_show_production_login_message: false
+base_install_updates_automatically: true
 
 backend_server_name: "{{ cookiecutter.backend_app_hostname }}"
 
