--- a/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/environments/prod/group_vars/all/vars.yml
@@ -3,6 +3,7 @@
 #deploy_check_display_confirmation_prompts: true
 #
 #base_show_production_login_message: true
+#base_install_updates_automatically: true
 #
 #backend_server_name: "<your-production-server-backend-cname>"
 #
