--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/main.yml
@@ -3,6 +3,7 @@
 - import_tasks: selinux.yml
 
 - import_tasks: yum_cron.yml
+  when: base_install_updates_automatically
 
 - import_tasks: login_info.yml
 
