--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/vagrant_mount.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/vagrant_mount.yml
@@ -37,7 +37,7 @@
 - name: create a bind mount from the venv directory to the vagrant synced directory
   mount:
     src: "/home/{{ backend_app_user }}/venv"
-    path: "{{ backend_app_root }}/current/venv"
+    path: "{{ backend_app_deploy_helper.new_release_path }}/venv"
     opts: bind,noauto
     state: mounted
     fstype: none
