--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -49,8 +49,8 @@ Vagrant.configure("2") do |config|
   config.hostmanager.manage_guest = true
 
   config.vm.define "dev", primary: true do |machine|
-    machine.vm.hostname = "{{ cookiecutter.frontend_app_hostname }}"
-    machine.hostmanager.aliases = ["{{ cookiecutter.backend_app_hostname }}"]
+    machine.vm.hostname = "{{ cookiecutter.frontend_app_dev_hostname }}"
+    machine.hostmanager.aliases = ["{{ cookiecutter.backend_app_dev_hostname }}"]
     machine.vm.network "private_network", ip: "172.17.177.21"
     # Enables X11 forwarding. This can be useful when running Selenium tests
     # since you can see exactly what's happening in the browser during the tests.
@@ -86,7 +86,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "db" do |machine|
     machine.vbguest.no_install = true
-    machine.vm.hostname = "{{ cookiecutter.database_hostname }}"
+    machine.vm.hostname = "{{ cookiecutter.database_dev_hostname }}"
     machine.vm.network "private_network", ip: "172.17.177.22"
     machine.vm.provider "virtualbox" do |virtualbox|
       virtualbox.name = "{{ cookiecutter.project_slug }}_db"
