--- a/{{ cookiecutter.project_slug }}/frontend_app/package.json
+++ b/{{ cookiecutter.project_slug }}/frontend_app/package.json
@@ -16,10 +16,9 @@
     "typescript": "3.6.3"
   },
   "scripts": {
-    "check-environment": "node checkEnvironment.js",
-    "start": "yarn run check-environment && react-scripts start",
-    "build": "yarn run check-environment && react-scripts build",
-    "test": "yarn run check-environment && react-scripts test",
+    "start": ". set_dev_env_vars.sh && node checkEnvironment.js && react-scripts start",
+    "build": "node checkEnvironment.js && react-scripts build",
+    "test": ". set_dev_env_vars.sh && node checkEnvironment.js && react-scripts test",
     "eject": "react-scripts eject",
     "prettier": " prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
