--- a/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/yum_cron.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/base/tasks/yum_cron.yml
@@ -16,4 +16,4 @@
     dest: "/etc/yum/yum-cron.conf"
     regexp: 'apply_updates'
     line: "apply_updates = {{ base_install_updates_automatically | bool | ternary('yes', 'no') }}"
-{% endraw }
+{% endraw %}
