--- a/{{ cookiecutter.project_slug }}/frontend_app/package.json
+++ b/{{ cookiecutter.project_slug }}/frontend_app/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^4.3.5",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
-    "typescript": "3.6.3"
+    "react-scripts": "^3.1.1",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": ". set_dev_env_vars.sh && node check_environment.js && react-scripts start",
