--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -31,6 +31,7 @@ end
 Vagrant.configure("2") do |config|
 
   config.vagrant.plugins = [
+    "vagrant-proxyconf",
     "vagrant-vbguest",
     "vagrant-hostmanager",
   ]
@@ -38,6 +39,12 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = true
   # disable the default vagrant mount. We configure custom mounts on the VM separately.
   config.vm.synced_folder ".", "/vagrant", disabled: true
+
+  if Vagrant.has_plugin?("vagrant-proxyconf")
+    config.yum_proxy.http = "{{ cookiecutter.vagrant_yum_proxy }}"
+    config.proxy.http = "{{ cookiecutter.vagrant_http_proxy }}"
+    config.proxy.https = "{{ cookiecutter.vagrant_https_proxy }}"
+  end
 
   if Vagrant.has_plugin?("vagrant-vbguest") then
     config.vbguest.installer = CustomVbGuestInstaller
