--- a/{{ cookiecutter.project_slug }}/Vagrantfile
+++ b/{{ cookiecutter.project_slug }}/Vagrantfile
@@ -140,11 +140,8 @@ Vagrant.configure("2") do |config|
       hostnamectl set-hostname {{ cookiecutter.controller_hostname }}
       # install ansible requirements
       yum install -y epel-release
-      yum install -y python36 python36-pip python36-devel sshpass
-      # Vagrant doesn't allow us to specify which version of pip/python is used
-      # to install our provisioning requirements when using the 'ansible_local'
-      # provisioner, so we set the system default to Python 3 on the controller VM.
-      alternatives --install /usr/bin/pip pip /usr/bin/pip3.6 1
+      yum install -y python36 python36-pip python36-devel sshpass openssl-devel
+      pip3 install -r /vagrant/provisioning/requirements.txt
     SCRIPT
 
     machine.vm.provision "shell", inline: $controller_vm_setup_script, privileged: true
@@ -156,8 +153,7 @@ Vagrant.configure("2") do |config|
       ansible.playbook = "playbook.yml"
       ansible.provisioning_path = "/vagrant/provisioning"
       ansible.config_file = "ansible-vagrant.cfg"
-      ansible.install_mode = "pip_args_only"
-      ansible.pip_args = "-r /vagrant/provisioning/requirements.txt"
+      ansible.install = false
       ansible.galaxy_role_file = "requirements.yml"
       ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file}"
       ansible.verbose = false
