--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 /.idea/
 /.vagrant/
 /provisioning/galaxy_roles/
+/backend_app/gunicorn.cfg
 /backend_app/settings.env
 /backend_app/venv/
 /backend_app/static_root/
