Install node.js and yarn using ansible-galaxy roles.

--- a/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/playbook.yml
@@ -3,7 +3,8 @@
 - hosts: localhost
   roles:
     - deploy_check
-    - yarn
+    - { role: geerlingguy.nodejs, become: yes }
+    - { role: tmiller02.yarn, become: yes }
   tasks:
     - name: build frontend app
       include_role:
