--- a/{{ cookiecutter.project_slug }}/provisioning/requirements.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/requirements.yml
@@ -5,3 +5,9 @@
 
 - src: geerlingguy.nginx
   version: "2.7.0"
+
+- src: geerlingguy.nodejs
+  version: "5.0.0"
+
+- src: tmiller02.yarn
+  version: "0.1.0"
